--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
-  "name": "hexlet",
+  "name": "Small project",
   "version": "1.0.0",
   "type": "module",
   "description": "My first full project",
   "main": "index.js",
+  "repository": {
+    "type": "git";,
+    "url": "https://github.com/smoke7747/hexlet-js"
+  }
+  "homepage": "https://github.com/smoke7747/hexlet-js/blob/master/index.js", 
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
