--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "My first full project",
   "main": "index.js",
   "repository": {
-    "type": "git";,
+    "type": "git",
     "url": "https://github.com/smoke7747/hexlet-js"
   }
   "homepage": "https://github.com/smoke7747/hexlet-js/blob/master/index.js", 
