--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/smoke7747/hexlet-js"
+    "url": "https://github.com/smoke7747/hexlet-js.git"
   },
      "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
