--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   "author": "Smoke7747",
   "license": "ISC",
   "dependencies": {
+    "hexo": "^5.2.0",
     "lodash": "^4.17.20"
+  },
+  "devDependencies": {
+    "jest": "^26.4.2",
+    "prettier": "^2.1.2"
   }
 }
